test/errors/identifiers_error/zs/prefix_zserio/union_name_error.zs
package prefix_zserio.union_name_error;

union UnionZserio
{
    int32 value;
};

union Zserio // zserio prefix!
{
    string valueS;
    int32 valueI;
};
